@@ -2,7 +2,7 @@
  OmegaT 3.6.0 update 7
 ----------------------------------------------------------------------
   0 Enhancement
-  1 Bug fix
+  2 Bug fixes
   0 Localisation update
 ----------------------------------------------------------------------
 3.6.0 update 7 vs 3.6.0 update 6
@@ -11,6 +11,9 @@
 
   - Extra tags not recognised by tag validation 
   https://sourceforge.net/p/omegat/bugs/876/
+
+  - CR/LF replaced with LF on LaTex files 
+  https://sourceforge.net/p/omegat/bugs/865/
 
 ----------------------------------------------------------------------
  OmegaT 3.6.0 update 6 (2017-06-26)
